--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,16 @@
+*.log
+.DS_Store
 /.idea
 /.venv
-.DS_Store
-__pycache__
 /diff
-/scenario*.py
-/qbittorrent-scenario.sh
+/dropbox-mini
+/example-dev.py
+/example-finish.py
 /interactive.py
 /interactive.sh
-/tmp*
-/sudo*.py
-/dropbox-mini
 /print-macos-settings
-*.log
+/qbittorrent-scenario.sh
+/scenario*.py
+/sudo*.py
+/tmp*
+__pycache__
