--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,26 +1,23 @@
 [project]
 name = "automac"
 description = "automac"
-#version = "1.0.0"
-dynamic = ["version"]
+version = "1.0.0"
+#dynamic = ["version"]
 authors = [
     { name = "zencd", email = "z@z.com" }
 ]
-dependencies = [
-#    "pyspark[ml]",
-#    "sklearn"
-]
+dependencies = []
 
-[project.optional-dependencies]
-dev = [
+#[project.optional-dependencies]
+#dev = [
 #    "tox",
 #    "pre-commit",
 #    "bump2version"
-]
+#]
 
 #[build-system]
 #build-backend = "flit_core.buildapi"
 #requires = ["flit_core >=3.2,<4"]
 
-#[tool.setuptools]
-#py-modules = ['automac', 'util']
+[tool.setuptools]
+py-modules = ['automac', 'util', 'base', 'features']
